--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,15 +40,14 @@ Issues = "https://github.com/BjornBethge/ai-secrets/issues"
 Documentation = "https://github.com/BjornBethge/ai-secrets#readme"
 
 [project.scripts]
-ai-secrets = "secrets_cli.__main__:app"
-secrets = "secrets_cli.__main__:app"
+ai-secrets = "ai_secrets.__main__:app"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/secrets_cli"]
+packages = ["src/ai_secrets"]
 
 [tool.uv]
 link-mode = "copy"
