Cleanup: Remove temp files and improve tests
- Use tmp_path instead of .test-secrets in CLI tests
- Test data now auto-cleanup after each test
- Remove migration scripts (not needed for fresh installs)
- Clean up .gitignore (remove MLflow/mlruns references)
- Update README to document service-specific metadata files
- All 34 tests passing

--- a/.gitignore
+++ b/.gitignore
@@ -44,14 +44,11 @@ htmlcov/
 .secrets/
 .test-secrets/
 .demo/
-*.db
-mlruns/
-mlflow_tracking/
 
 # OS
 .DS_Store
 Thumbs.db
 
 # UV
-uv.lock
+# uv.lock  # Keep uv.lock in repo for reproducible builds
 
