Fix GitHub Actions: Add UTF-8 encoding for Windows + optimize Rich console
- Configure Rich Console with legacy_windows=False for modern terminal support
- Add PYTHONIOENCODING=utf-8 to test workflow for proper emoji rendering
- Restore checkmark emoji (✓) in CLI output
- Fix test_export_bash to work with CliRunner's mixed stdout/stderr

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,8 +32,12 @@ jobs:
 
             - name: Run tests
               run: uv run pytest tests/ -v --tb=short
+              env:
+                  PYTHONIOENCODING: utf-8
 
             - name: Test CLI commands
+              env:
+                  PYTHONIOENCODING: utf-8
               run: |
                   uv run python -m ai_secrets --help
                   uv run python -m ai_secrets --service-name ci-test set TEST_KEY "test_value"
